Fixed some IDE warnings